.provarCaches/00D5f000005vwGkEAI/objects/rstkf__cashreqreport__c.object
<CustomObject>
    <description>cashreqreport__c</description>
    <fields>
        <fullName>rstkf__cashreqreport_amtnotselected__c</fullName>
        <label>Amount Not Selected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_apinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Transaction</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>Cash Requirements Report</relationshipLabel>
        <relationshipName>cashreqreports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_discblamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discountable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_disctknamt__c</fullName>
        <label>Discount Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_exportnum__c</fullName>
        <label>Export Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Cash Requirements Report</relationshipLabel>
        <relationshipName>cashreqreports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_isfirstrec__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is First Rec</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_ispayruntotal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Pay Run Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_isvendorsubtotal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Vendor Total Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_key__c</fullName>
        <label>Session Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_netpay__c</fullName>
        <label>Net Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_netpaybank__c</fullName>
        <label>Bank Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_paysession__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Selection Session</label>
        <referenceTo>rstkf__paysession__c</referenceTo>
        <relationshipLabel>Cash Requirements Report</relationshipLabel>
        <relationshipName>cashreqreports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_povendcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Company</label>
        <referenceTo>rstkf__povendcmpno__c</referenceTo>
        <relationshipLabel>Cash Requirements Report</relationshipLabel>
        <relationshipName>cashreqreports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_reasonfornonselection__c</fullName>
        <label>Why Not Selected</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_trantotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Transaction Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_vendno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Cash Requirements Report</relationshipLabel>
        <relationshipName>cashreqreports</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cash Requirements Report</label>
    <nameField>
        <label>Cash Requirements Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cash Requirements Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>